--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         margin: 0;
         padding: 0;
         background: #000000 url(/globe/loading.gif) center center no-repeat;
-        /* color: #ffffff; */
-        color: #f4d142;
+        color: #ffffff;
         font-family: sans-serif;
         font-size: 13px;
         line-height: 20px;
         height: 100%;
+      }
+
+      #gartteam{
+
       }
 
       #info {
@@ -45,7 +48,8 @@
       }
 
       a {
-        color: #aaa;
+        /* color: #aaa; */
+        color: #f4d142;
         text-decoration: none;
       }
       a:hover {
@@ -111,7 +115,8 @@
   <div id="container"></div>
 
   <div id="info">
-    <strong><a href="https://experiments.withgoogle.com/chrome/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span> Created by the Google Data Arts Team <span class="bull">&bull;</span> Modified by <a href="http://www.choijanet.com" target="_blank">Janet Choi</a><span class="bull">&bull;</span>Data acquired from <a href="https://data.worldbank.org/indicator/FI.RES.TOTL.CD">World Bank</a>
+    <strong><a href="https://experiments.withgoogle.com/chrome/globe">WebGL Globe</a></strong> <span class="bull">&bull;</span>Created by the Google Data Arts Team<span class="bull">&bull;</span> Modified by <a href="http://www.choijanet.com" target="_blank">Janet Choi</a><span class="bull">&bull;</span> Code available at <a href="https://github.com/janetckm/globeCopy">Github</a>
+    <span class="bull">&bull;</span>Data acquired from <a href="https://data.worldbank.org/indicator/FI.RES.TOTL.CD">World Bank</a>
   </div>
 
   <div id="currentInfo">
